--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "nodemon": "^1.19.4",
     "socket.io": "^2.3.0"
   }
 }
