--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "chat app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "nodemon": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "*",
-    "express": "*"
+    "express": "*",
+    "nodemon": "*",
+    "socket.io": "*"
   }
 }
